Fixed overflow

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -306,7 +306,7 @@ a {
 #content{
   width: 100%;
   height: 100%;
-  overflow: scroll;
+  overflow: hidden;
   .page{
     width:100%;
     height:100%;
